--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
+    "@ensdomains/ens": "^0.4.4",
+    "@ensdomains/resolver": "^0.2.4",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@truffle/contract": "^4.2.7",
     "@types/bl": "^2.1.0",
     "@types/ipfs": "git+https://github.com/Xmader/ipfs-types.git",
     "@types/multiaddr": "^7.2.0",
@@ -63,6 +66,7 @@
     "@typescript-eslint/parser": "^2.34.0",
     "ava": "2.2.0",
     "bl": "^4.0.2",
+    "bs58": "^4.0.1",
     "codecov": "^3.5.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^7.0.0",
@@ -70,6 +74,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsdoc": "^25.4.2",
     "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eth-ens-namehash": "^2.0.8",
+    "ganache-core": "^2.10.2",
     "gh-pages": "^2.0.1",
     "ipfs": "^0.44.0",
     "it-all": "^1.0.2",
