--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
+    "solc": "^0.6.10",
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
