--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fix:eslint": "eslint --fix",
     "test": "run-s build test:*",
     "test:lint": "eslint && prettier \"src/**/*.ts\" --list-different; exit 0",
-    "test:unit": "run-s build && nyc --silent --cache false ava --verbose",
+    "test:unit": "run-s build && nyc --silent --cache false ava --verbose --serial",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
     "cov:html": "nyc report --reporter=html",
