--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
     "typescript": "3.9.3",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "web3-core": "^1.2.9"
   },
   "ava": {
     "failFast": true,
