--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "bl": "^4.0.2",
     "bs58": "^4.0.1",
     "codecov": "^3.5.0",
+    "content-hash": "^2.5.2",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
