--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "eth-ens-namehash": "^2.0.8",
     "ganache-core": "^2.10.2",
     "gh-pages": "^2.0.1",
-    "ipfs": "^0.47.0",
-    "it-all": "^1.0.2",
+    "ipfs": "0.48.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
