--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/bl": "^2.1.0",
     "@types/ipfs": "git+https://github.com/Xmader/ipfs-types.git",
     "@types/multiaddr": "^7.2.0",
+    "@types/node": "^14.11.2",
     "@types/web3": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
@@ -75,9 +76,9 @@
     "eslint-plugin-jsdoc": "^25.4.2",
     "eslint-plugin-prefer-arrow": "^1.2.1",
     "eth-ens-namehash": "^2.0.8",
-    "ganache-core": "^2.10.2",
+    "ganache-core": "2.12.2-beta.0",
     "gh-pages": "^2.0.1",
-    "ipfs": "0.48.1",
+    "ipfs": "0.50.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
