--- a/package.json
+++ b/package.json
@@ -50,13 +50,20 @@
   "engines": {
     "node": ">=8.9"
   },
+  "dependencies": {
+    "bl": "^4.0.2",
+    "content-hash": "^2.5.2",
+    "eth-ens-namehash": "^2.0.8",
+    "ipfs": "0.50.2",
+    "web3": "^1.2.8",
+    "web3-core": "^1.2.9"
+  },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
     "@ensdomains/ens": "^0.4.4",
-    "@ensdomains/resolver": "^0.2.4",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@truffle/contract": "^4.2.7",
+    "@truffle/hdwallet-provider": "^1.1.0",
     "@types/bl": "^2.1.0",
     "@types/ipfs": "git+https://github.com/Xmader/ipfs-types.git",
     "@types/multiaddr": "^7.2.0",
@@ -65,20 +72,15 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "ava": "2.2.0",
-    "bl": "^4.0.2",
-    "bs58": "^4.0.1",
     "codecov": "^3.5.0",
-    "content-hash": "^2.5.2",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsdoc": "^25.4.2",
     "eslint-plugin-prefer-arrow": "^1.2.1",
-    "eth-ens-namehash": "^2.0.8",
     "ganache-core": "2.12.2-beta.0",
     "gh-pages": "^2.0.1",
-    "ipfs": "0.50.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
@@ -87,9 +89,7 @@
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
-    "typescript": "3.9.3",
-    "web3": "^1.2.8",
-    "web3-core": "^1.2.9"
+    "typescript": "3.9.3"
   },
   "ava": {
     "failFast": true,
