--- a/dlog/package.json
+++ b/dlog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dlog",
   "version": "1.0.0",
-  "description": "Almonit Blog Connector",
+  "description": "Alpress decentralized blogs library",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -89,7 +89,9 @@
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
-    "typescript": "3.9.3"
+    "typescript": "3.9.3",
+    "dlog-utils": "file:../dlog-utils/",
+    "alpress-contracts": "file:../alpress-contracts/"
   },
   "ava": {
     "failFast": true,
