--- a/dlog/package.json
+++ b/dlog/package.json
@@ -52,18 +52,14 @@
   },
   "dependencies": {
     "bl": "^4.0.2",
-    "content-hash": "^2.5.2",
     "eth-ens-namehash": "^2.0.8",
     "ipfs": "0.50.2",
-    "web3": "^1.2.8",
-    "web3-core": "^1.2.9"
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
-    "@ensdomains/ens": "^0.4.4",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@truffle/hdwallet-provider": "^1.1.0",
     "@types/bl": "^2.1.0",
     "@types/ipfs": "git+https://github.com/Xmader/ipfs-types.git",
     "@types/multiaddr": "^7.2.0",
@@ -79,13 +75,11 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsdoc": "^25.4.2",
     "eslint-plugin-prefer-arrow": "^1.2.1",
-    "ganache-core": "2.12.2-beta.0",
     "gh-pages": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
-    "solc": "^0.6.10",
     "standard-version": "^6.0.1",
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
