--- a/packages/alpress-contracts/package.json
+++ b/packages/alpress-contracts/package.json
@@ -13,7 +13,7 @@
     "clean": "trash build test"
   },
   "author": "Almonit",
-  "license": "ISC",
+  "license": "",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "trash-cli": "^3.1.0"
