--- a/packages/dlog/package.json
+++ b/packages/dlog/package.json
@@ -55,7 +55,7 @@
     "bl": "^4.0.2",
     "eth-ens-namehash": "^2.0.8",
     "ipfs": "0.50.2",
-    "web3": "^1.2.8"
+    "web3": "1.3.1"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
