--- a/packages/alpress-contracts/tsconfig.json
+++ b/packages/alpress-contracts/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "build/main"
   },
   "include": ["src/**/*.ts", "src/**/*.json"],
-  "exclude": ["node_modules/**"]
+  "exclude": ["node_modules/**", "src/contracts/**"]
 }
