update ipfs to 0.54.2, skip lib type check

--- a/packages/dlog/tsconfig.json
+++ b/packages/dlog/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
+    "checkJs": false,
     "rootDir": "src",
-    "outDir": "build/main"
+    "outDir": "build/main",
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
