--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "devDependencies": {
     "lerna": "^3.22.1",
-    "typescript": "3.9.3"
+    "typescript": "4.1.x"
   },
   "scripts": {
     "build": "./node_modules/.bin/lerna run build --stream",
