--- a/packages/dlog/package.json
+++ b/packages/dlog/package.json
@@ -54,7 +54,7 @@
     "@dlog/dlog-utils": "^0.0.1",
     "bl": "^4.0.2",
     "eth-ens-namehash": "^2.0.8",
-    "ipfs": "0.50.2",
+    "ipfs": "0.54.2",
     "web3": "1.3.2"
   },
   "devDependencies": {
@@ -62,7 +62,6 @@
     "@bitjson/typedoc": "^0.15.0-0",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/bl": "^2.1.0",
-    "@types/ipfs": "git+https://github.com/Xmader/ipfs-types.git",
     "@types/multiaddr": "^7.2.0",
     "@types/node": "^14.11.2",
     "@types/web3": "^1.2.2",
@@ -84,7 +83,7 @@
     "standard-version": "^8.0.1",
     "trash-cli": "^3.0.0",
     "typedoc": "^0.17.7",
-    "typescript": "3.9.3"
+    "typescript": "4.1.x"
   },
   "ava": {
     "failFast": true,
